# hello/api/swagger/swagger.yaml
@@ -42,6 +42,277 @@ consumes:
 produces:
   - application/json
 paths:
+  /item:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: item
+    post:
+      tags:
+        - "apply"
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: itempost
+      consumes:
+      - "application/json"
+      parameters:
+      - in: body
+        name: body
+        description: input username and password
+        required: true
+        schema:
+          type: array
+          items:
+            type: "object"
+            required:
+              - id
+              - itemproject
+              - limitnumber
+            properties:
+              id:
+                type: integer
+                example: 1122
+              itemproject:
+                type: string
+                example: 'admin'
+              limitnumber:
+                type: integer
+                example: 1122
+
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      tags:
+        - "apply"
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: itemput
+      consumes:
+      - "application/json"
+      parameters:
+      - in: body
+        name: body
+        description: input username and password
+        required: true
+        schema:
+          type: array
+          items:
+            type: "object"
+            required:
+              - itemproject
+              - limitnumber
+              - id
+            properties:
+              id:
+                type: integer
+                example: 1122
+              itemproject:
+                type: string
+                example: 'admin'
+              limitnumber:
+                type: integer
+                example: 1122
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    get:
+      tags:
+        - "apply"
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: itemget
+      consumes:
+      - "application/json"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /applyinfowomen:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: applyinfowomen
+    post:
+      tags:
+        - "apply"
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: applyinfowomenpost
+      consumes:
+      - "application/json"
+      parameters:
+      - in: body
+        name: body
+        description: input username and password
+        required: true
+        schema:
+          type: array
+          items:
+            type: "object"
+            required:
+              - nubmerid
+              - name
+              - itemone
+              - itemtwo
+              - itemthree
+              - itemfour
+              - sex
+              - dateday
+              - resid
+              - type
+            properties:
+              nubmerid:
+                type: integer
+                example: 1122
+              name:
+                type: string
+                example: 'admin'
+              itemone:
+                type: string
+                example: 'admin'
+              itemtwo:
+                type: string
+                example: 'admin'
+              itemthree:
+                type: string
+                example: 'admin'
+              itemfour:
+                type: string
+                example: 'admin'
+              sex:
+                type: string
+                example: 'admin'
+              dateday:
+                type: string
+                format: date
+                example: '2016-04-01'
+              resid:
+                type: integer
+                example: 1111
+              type:
+                type: string
+                example: 'ssss'
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      tags:
+        - "apply"
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: applyinfowomenput
+      consumes:
+      - "application/json"
+      parameters:
+      - in: body
+        name: body
+        description: input username and password
+        required: true
+        schema:
+          type: array
+          items:
+            type: "object"
+            required:
+              - nubmerid
+              - name
+              - itemone
+              - itemtwo
+              - itemthree
+              - itemfour
+              - sex
+              - dateday
+              - resid
+              - type
+            properties:
+              nubmerid:
+                type: integer
+                example: 33333
+              name:
+                type: string
+                example: 'admin'
+              itemone:
+                type: string
+                example: 'admin'
+              itemtwo:
+                type: string
+                example: 'admin'
+              itemthree:
+                type: string
+                example: 'admin'
+              itemfour:
+                type: string
+                example: 'admin'
+              sex:
+                type: string
+                example: 'admin'
+              dateday:
+                type: string
+                format: date
+                example: '2016-04-01'
+              resid:
+                type: integer
+                example: 1111
+              type:
+                type: string
+                example: 'ssss'
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    get:
+      tags:
+        - "apply"
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: applyinfowomenget
+      consumes:
+      - "application/json"
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /applyinfo:
     # binds a127 app logic to a route
     x-swagger-router-controller: applyinfo
@@ -75,8 +346,8 @@ paths:
               - type
             properties:
               nubmerid:
-                type: number
-                example: 33333
+                type: integer
+                example: 1122
               name:
                 type: string
                 example: 'admin'
@@ -100,7 +371,7 @@ paths:
                 format: date
                 example: '2016-04-01'
               resid:
-                type: number
+                type: integer
                 example: 1111
               type:
                 type: string
@@ -146,7 +417,7 @@ paths:
               - type
             properties:
               nubmerid:
-                type: number
+                type: integer
                 example: 33333
               name:
                 type: string
@@ -171,7 +442,7 @@ paths:
                 format: date
                 example: '2016-04-01'
               resid:
-                type: number
+                type: integer
                 example: 1111
               type:
                 type: string
@@ -252,7 +523,7 @@ paths:
               type: string
               example: 'admin'
             tel:
-              type: number
+              type: integer
               example: 1111
       responses:
         "200":
